--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
 
         function startDrawing(event) {
             isDrawing = true;
-            [lastX, lastY] = [event.clientX - canvas.offsetLeft, event.clientY - canvas.offsetTop];
+            [lastX, lastY] = getCoordinates(event);
         }
 
         function stopDrawing() {
@@ -69,8 +69,7 @@
         function draw(event) {
             if (!isDrawing) return;
 
-            const currentX = event.clientX - canvas.offsetLeft;
-            const currentY = event.clientY - canvas.offsetTop;
+            const [currentX, currentY] = getCoordinates(event);
 
             context.lineWidth = 5;
             context.lineCap = 'round';
@@ -84,10 +83,23 @@
             [lastX, lastY] = [currentX, currentY];
         }
 
+        function getCoordinates(event) {
+            if (event.touches && event.touches.length > 0) {
+                const touch = event.touches[0];
+                return [touch.clientX - canvas.offsetLeft, touch.clientY - canvas.offsetTop];
+            }
+            return [event.clientX - canvas.offsetLeft, event.clientY - canvas.offsetTop];
+        }
+
         canvas.addEventListener('mousedown', startDrawing);
         canvas.addEventListener('mousemove', draw);
         canvas.addEventListener('mouseup', stopDrawing);
         canvas.addEventListener('mouseout', stopDrawing);
+
+        canvas.addEventListener('touchstart', startDrawing);
+        canvas.addEventListener('touchmove', draw);
+        canvas.addEventListener('touchend', stopDrawing);
+        canvas.addEventListener('touchcancel', stopDrawing);
 
         // Save the modified image
         const saveBtn = document.getElementById('saveBtn');
